<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apptuned.fantacybetting.AccountActivity"
    tools:showIn="@layout/activity_account">

    <TextView
        android:id="@+id/tv_accountBalance"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="128dp"
        android:text="@string/account_balance"
        android:textAlignment="viewStart"
        android:textColor="@color/fonrPrimary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bankLoan"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="82dp"
        android:layout_marginStart="83dp"
        android:text="@string/bank_loan"
        android:textAlignment="viewStart"
        android:textColor="@color/fonrPrimary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_accountBalance" />

    <TextView
        android:id="@+id/tv_bankLoanVal"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="8dp"
        android:text="500"
        android:textAlignment="viewEnd"
        android:textColor="@color/fonrPrimary"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_accountBalanceVal"
        android:layout_marginRight="68dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_bankLoan"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_accountBalanceVal"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="128dp"
        android:text="10000"
        android:textAlignment="viewEnd"
        android:textColor="@color/fonrPrimary"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintLeft_toRightOf="@+id/tv_accountBalance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_placeBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/place_bet"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_getBankLoan" />

    <Button
        android:id="@+id/btn_getBankLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/get_bank_loan"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bankLoan" />

    <TextView
        android:id="@+id/tv_howToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:text="@string/how_to_play"
        android:textColor="@color/fonrPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_placeBet"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
